--- a/app/views/custom/verification/residence/new.html.erb
+++ b/app/views/custom/verification/residence/new.html.erb
@@ -51,7 +51,7 @@
           <%= f.check_box :terms_of_service, title: t("verification.residence.new.accept_terms_text_title"), label: false %>
           <span class="checkbox">
             <%= t("verification.residence.new.accept_terms_text",
-                terms_url: link_to(t("verification.residence.new.terms"), "/census_terms",
+                terms_url: link_to(t("verification.residence.new.terms"), "/conditions",
                 title: t("shared.target_blank_html"),
                 target: "_blank")).html_safe
             %>
